--- a/scss/_chart.scss
+++ b/scss/_chart.scss
@@ -5,12 +5,10 @@
 #chartContainer {
     background-color: black;
     border: 1px solid white;
-    overflow-x: auto;
 }
 
 #chart {
     margin: 0 auto;
-    min-width: 70%;
 }
 
 .tile-2 {
